Update: secret using keyvault

--- a/manifests/deploy/ingress.yaml
+++ b/manifests/deploy/ingress.yaml
@@ -16,7 +16,7 @@ spec:
         path: /api/poi
       # Node.js
       - backend:
-          serviceName: user
+          serviceName: userprofile
           servicePort: 80
         path: /api/user
       # Java
